--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="main__hr"></div>
 
         <section class="results">
-            <button class="results__button">ROLL!</button>
+            <button class="results__button" id="button">ROLL!</button>
 
             <!-- Contains all instances of results -->
             <div class="results__container">
