Added min and max inputs

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <section class="settings">
             <div class="settings__column settings__column--first">
                 <p class="settings__paragraph">X Min Value:</p>
-                <p class="settings__number">2</p>
+                <input class="settings__number" value="2" id="xMin"></input>
                 <p class="settings__paragraph">X Max Value:</p>
-                <p class="settings__number">12</p>
+                <input class="settings__number" value="12" id="xMax"></input>
             </div>
 
             <div class="settings__column">
                 <p class="settings__paragraph">Y Min Value:</p>
-                <p class="settings__number">2</p>
+                <input class="settings__number" value="2" id="yMin"></input>
                 <p class="settings__paragraph">Y Max Value:</p>
-                <p class="settings__number">12</p>
+                <input class="settings__number" value="12" id="yMax"></input>
             </div>
         </section>
 
